feat(i18n): complete TR→EN localization of all internal strings (#1300)
Full codebase scan and conversion of all Category A Turkish strings
to English across 72 files:

- agent/: safety patterns, error messages, docstrings (6 files)
- skills/: CLI messages, module docstrings (4 files)
- voice/: log messages, error messages (4 files)
- proactive/: CLI display strings, schedule labels (1 file)
- messaging/: module docstrings, error messages (5 files)
- google/: OAuth errors, calendar cache docstrings (3 files)
- router/: docstrings, comments (4 files)
- learning/: docstrings, section headers (2 files)
- automation/: enum comments, descriptions (2 files)
- email/: type comments, preview labels (1 file)
- data/: metrics report labels, docstring examples (3 files)
- browser/: error/status messages, page memory (4 files)
- api/: auth errors, settings responses (3 files)
- controls/: log messages, status labels (3 files)
- coding/: tool result messages (1 file)
- metrics/: CLI output, gate messages (1 file)
- privacy/: status labels (1 file)
- system/: tray UI labels, menu items (1 file)
- ui/: reliability labels, step text, error default (3 files)
- analytics/: suggestion reason strings (1 file)
- core/: job state docstrings (1 file)
- conversation/: FSM state comments (1 file)
- connectors/: classroom errors, tool descriptions (1 file)
- cli.py: pager, HUD, welcome banner (1 file)
- server.py: docstring, hint messages (1 file)
- scripts/: demo, smoke tests, vllm docstrings (4 files)
- config/: sandbox, permissions, music comments (3 files)
- tests/: updated 7 test files to match new English strings

Category B (NLU keywords, LLM prompts, user-facing responses)
intentionally kept in Turkish — product functionality.

--- a/config/music.yaml
+++ b/config/music.yaml
@@ -1,5 +1,5 @@
 # ── Music Control Configuration ──────────────────────────────────────
-# Issue #1296: Müzik Kontrolü — Spotify/Local Player + Context-Aware Suggestions
+# Issue #1296: Music Control — Spotify/Local Player + Context-Aware Suggestions
 
 music:
   # Default player backend: spotify | mpris | auto
