feat(policy): wire PolicyEngineV2 into orchestrator tool execution (#1291)
- Replace metadata-based risk checks with PolicyEngineV2.evaluate() in
  both pre-scan phase and per-tool execution loop
- Add v2-enriched fields to confirmation payload: risk_tier, action,
  display_params, editable_fields, editable, cooldown_seconds
- Record session permits via engine.confirm() on confirmation acceptance
  (enables confirm-once-per-session for MED-risk tools)
- Add confirmed_edited_params to OrchestratorState for HIGH-risk param
  edit UX flow
- Prefer PolicyEngineV2.get_risk_tier() for risk_level in verify/retry
- Add 'bantz policy' CLI subcommand: info, preset, risk, audit
- Wire CLI dispatch in cli.py main()
- Legacy metadata fallback preserved when PolicyEngineV2 is unavailable
- 22 new integration tests (all passing)
- 114 existing policy tests verified green

--- a/config/bantz-env.example
+++ b/config/bantz-env.example
@@ -153,6 +153,14 @@ BANTZ_BRIEFING_HOUR=08
 # BANTZ_MISROUTE_DATASET=~/.cache/bantz/datasets/router_misroutes.jsonl
 
 
+# ─── Neo4j / Graph Database ──────────────────────────────────────
+# NEO4J_URI=neo4j+s://xxxx.databases.neo4j.io
+# NEO4J_USERNAME=neo4j
+# NEO4J_PASSWORD=                          # Store in ~/.config/bantz/neo4j-aura.env
+# NEO4J_DATABASE=neo4j
+# BANTZ_GRAPH_BACKEND=sqlite               # sqlite | neo4j
+
+
 # ─── Memory / Context ───────────────────────────────────────────
 # BANTZ_MEMORY_DB=~/.bantz/memory.db       # User memory SQLite path
 # BANTZ_MEMORY_DB_PATH=~/.bantz/memory.db  # Memory store DB path (alternate)
